# BookKeeping

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  QtConfig.cmake  README.md  build.bat
.opencode/: opencode.json
DataCenter/: CMakeLists.txt  DBHelper.cpp  DBHelper.h  DataCenter.cpp  DataCenter.h  RecordRepository.cpp  RecordRepository.h  TradeRecord.h
MainApp/: CMakeLists.txt  main.cpp
MyWindow/: AccountingWidget.cpp  AccountingWidget.h  AnalysisWidget.cpp  AnalysisWidget.h  CMakeLists.txt  Export.h  MainWindow.cpp  MainWindow.h  PageController.cpp  PageController.h
Tests/: CMakeLists.txt  test_datacenter.cpp
